- Перенесена бизнес-логика по поиску популярных фильмов в сервис слой